--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,8 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
-#spring.jpa.hibernate.use-new-id-generator-mappings=true
-#hibernate.id.new_generator_mappings=true
+spring.jpa.hibernate.use-new-id-generator-mappings=true
+hibernate.id.new_generator_mappings=true
 
 # Seguridad JWT
 jwt.authorities.key=roles
